<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:orientation="vertical"
        >
    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/pichu"
        android:layout_alignParentTop="true"
        android:id="@+id/image"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kode"
        android:text="@string/kode_buku"
        android:layout_below="@id/image"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/judul"
        android:text="@string/judul_buku"
        android:layout_below="@id/kode"
        android:textSize="18sp"
        android:textStyle="bold"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/matpel"
            android:text="@string/mata_pelajaran"
            android:layout_below="@id/judul"
            android:textSize="18sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/url"
            android:text="@string/url"
            android:layout_below="@id/matpel"
            android:textSize="18sp"
            android:textStyle="bold"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baca"
            android:layout_below="@id/url"
            android:id="@+id/btn"
            />


    </RelativeLayout>
</androidx.cardview.widget.CardView>